sometimes the 'worlok' doesn't appears and you stuck without monster ;)

--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
 P500 WoW Game
 Disassembled and converted from the Max Machine ROM version by Vossi 06/2020
+
 P500 extras:
+ESC in start screen enables 'never die' cheat - only allowed for testing the levels !!!
+
+Bugs:
+sometimes the 'worlok' doesn't appears and you stuck without monster ;)
